--- a/pom.xml
+++ b/pom.xml
@@ -11,36 +11,6 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>neat-jsonfn Magnolia Module</name>
-  <!--
-    Please uncomment and fill in, or remove, the following.
-    The license below is not linked to any checkstyle or other check which would validate the source files or the packaging,
-    nor influence the generated README.txt file.
-    If you wanted to enforce a license header in source files, you can set the <checkstyleHeader> property.
-  <description>... please fill in this description ...</description>
-  <inceptionYear>...</inceptionYear>
-  <organization>
-    <name>...</name>
-    <url>...</url>
-  </organization>
-
-  <developers>
-    <developer>
-      <id>...</id>
-      <name>...</name>
-    </developer>
-    ...
-  </developers>
-  <contributors>
-    ... add as needed...
-  </contributors>
-
-  <licenses>
-    <license>
-      <name>...</name>
-      <url>...</url>
-    </license>
-  </licenses>
-  -->
 
   <properties>
     <magnoliaVersion>5.4.3</magnoliaVersion>
@@ -49,9 +19,9 @@
 
   <!-- Please double-check these URLs -->
   <scm>
-    <connection>scm:git:http://git.magnolia-cms.com/forge/neat-jsonfn</connection>
-    <developerConnection>scm:git:https://git.magnolia-cms.com/forge/neat-jsonfn</developerConnection>
-    <url>http://git.magnolia-cms.com/gitweb/?p=forge/neat-jsonfn</url>
+    <connection>scm:git:http://git.magnolia-cms.com/forge/neat-jsonfn.git</connection>
+    <developerConnection>scm:git:https://git.magnolia-cms.com/forge/neat-jsonfn.git</developerConnection>
+    <url>https://github.com/rah003/neat-jsonfn</url>
     <tag>HEAD</tag>
   </scm>
 
