--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.neatresults.mgnltweaks</groupId>
       <artifactId>neat-tweaks-commons</artifactId>
-      <version>2.0.3-SNAPSHOT</version>
+      <version>2.0.3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
