--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <name>neat-jsonfn Magnolia Module</name>
 
   <properties>
-    <magnoliaVersion>5.4.3</magnoliaVersion>
+    <magnoliaVersion>5.4.6-SNAPSHOT</magnoliaVersion>
     <javaVersion>1.8</javaVersion>
   </properties>
 
@@ -43,7 +43,7 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.6.4</version>
     </dependency>
-    
+
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
