--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>com.neatresults.mgnltweaks</groupId>
   <artifactId>neat-jsonfn</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.9-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>neat-jsonfn Magnolia Module</name>
 
@@ -22,7 +22,7 @@
     <connection>scm:git:https://github.com/rah003/neat-jsonfn.git</connection>
     <developerConnection>scm:git:https://github.com/rah003/neat-jsonfn.git</developerConnection>
     <url>https://github.com/rah003/neat-jsonfn</url>
-    <tag>neat-jsonfn-1.0.8</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
